--- a/yaml/uploader.yaml
+++ b/yaml/uploader.yaml
@@ -117,3 +117,6 @@
       title: 上传错误时
       description: 上传报错时触发
       params: []
+  methods:
+    - name: chooseFile
+      description: 主动调起文件选择，由于浏览器安全限制，只在触发操作的上下文中调用才有效
