feat: bug fix 1752

--- a/src/stepper/api.yaml
+++ b/src/stepper/api.yaml
@@ -2,13 +2,13 @@
   title: 步进器
   labels:
     - Form
-  icon: switch
+  icon: stepper
   next: true
   nested: false
   attrs:
     - name: value
       title: 值
-      type: boolean
+      type: number
       sync: true
       model: true
       default: false
