--- a/yaml/tabs.yaml
+++ b/yaml/tabs.yaml
@@ -84,18 +84,18 @@
       default: false
       description: 是否禁用
     - name: badgebtn
-      title: 徽标显示
+      title: 徽章显示
       type: boolean
       default: false
-      description: 是否显示徽标
+      description: 是否显示徽章
     - name: badge
-      title: 徽标
+      title: 徽章
       type: string, number
-      description: 徽标的内容
+      description: 徽章的内容
     - name: badgemax
       title: 最大值
       type: number
-      description: 徽标内容为数字时显示的最大值
+      description: 徽章内容为数字时显示的最大值
   slots:
     - name: default
       title: 默认
