初步生成文档

--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   },
   "scripts": {
     "bootstrap": "yarn || npm i",
-    "dev": "vue-cli-service doc --port 9100",
-    "dev3": "cross-env scecn=desktop vant-cli dev",
+    "dev:vusion": "vue-cli-service doc --port 9100",
+    "dev": "cross-env scene=desktop vant-cli dev",
     "dev2": "vant-cli dev",
     "lint": "vant-cli lint",
     "test": "vant-cli test",
     "build2": "vant-cli build",
-    "build": "cross-env scecn=desktop vant-cli build",
+    "build": "cross-env scene=desktop vant-cli build",
     "release": "vant-cli release",
     "test:watch": "vant-cli test --watch",
     "release:site": "sh docs/site/release.sh",
