--- a/src/area/api.yaml
+++ b/src/area/api.yaml
@@ -12,7 +12,11 @@
       model: true
       default: ""
       description: 当前选中的省市区code
-      advanced: true
+    - name: areaListprop
+      title: 数据源(不填写的话默认全国)
+      type: array
+      default: '{"province_list":{"110000":"北京市"},"city_list":{"110100":"北京市"},"county_list":{"110101":"东城区","110102":"西城区","110105":"朝阳区","110106":"丰台区","110107":"石景山区","110108":"海淀区","110109":"门头沟区","110111":"房山区","110112":"通州区","110113":"顺义区","110114":"昌平区","110115":"大兴区","110116":"怀柔区","110117":"平谷区","110118":"密云区","110119":"延庆区"}}'
+      description: 一个包含字符串或对象的数组
     - name: title
       title: 顶部栏标题
       type: string
