--- a/src/cascader/api.yaml
+++ b/src/cascader/api.yaml
@@ -13,69 +13,9 @@
       default: ""
       description: 选中的值
     - name: options
-      title: 数据数组
+      title: 数据源
       type: array
-      default:
-        - text: 浙江省
-          value: "330000"
-          children:
-            - text: 杭州市
-              value: "330100"
-              children:
-                - text: 上城区
-                  value: "330102"
-                - text: 下城区
-                  value: "330103"
-                - text: 江干区
-                  value: "330104"
-            - text: 宁波市
-              value: "330200"
-              children:
-                - text: 海曙区
-                  value: "330203"
-                - text: 江北区
-                  value: "330205"
-                - text: 北仑区
-                  value: "330206"
-            - text: 温州市
-              value: "330300"
-              children:
-                - text: 鹿城区
-                  value: "330302"
-                - text: 龙湾区
-                  value: "330303"
-                - text: 瓯海区
-                  value: "330304"
-        - text: 江苏省
-          value: "320000"
-          children:
-            - text: 南京市
-              value: "320100"
-              children:
-                - text: 玄武区
-                  value: "320102"
-                - text: 秦淮区
-                  value: "320104"
-                - text: 建邺区
-                  value: "320105"
-            - text: 无锡市
-              value: "320200"
-              children:
-                - text: 锡山区
-                  value: "320205"
-                - text: 惠山区
-                  value: "320206"
-                - text: 滨湖区
-                  value: "320211"
-            - text: 徐州市
-              value: "320300"
-              children:
-                - text: 鼓楼区
-                  value: "320302"
-                - text: 云龙区
-                  value: "320303"
-                - text: 贾汪区
-                  value: "320305"
+      default: '[{"text":"理学","value":"理学","children":[{"text":"物理学","value":"物理学","children":[{"text":"理论物理","value":"理论物理"},{"text":"凝聚态物理","value":"凝聚态物理"},{"text":"材料物理","value":"材料物理"}]},{"text":"数学","value":"数学","children":[{"text":"基础数学","value":"基础数学"},{"text":"计算数学","value":"计算数学"},{"text":"应用数学","value":"应用数学"}]},{"text":"化学","value":"化学"}]},{"text":"工学","value":"工学","children":[{"text":"计算机科学与技术","value":"计算机科学与技术","children":[{"text":"计算机系统结构","value":"计算机系统结构"},{"text":"计算机软件与理论","value":"计算机软件与理论","disabled":true},{"text":"计算机应用技术","value":"计算机应用技术"}]},{"text":"软件工程","value":"软件工程","disabled":true},{"text":"机械工程","value":"机械工程","children":[{"text":"机械制造及其自动化","value":"机械制造及其自动化"},{"text":"机械电子工程","value":"机械电子工程"},{"text":"机械设计及理论","value":"机械设计及理论","disabled":true},{"text":"车辆工程","value":"车辆工程","disabled":true}]}]}]'
       description: 一个包含字符串或对象的数组
     - name: title
       title: 顶部栏标题
