--- a/src/cell-group/api.yaml
+++ b/src/cell-group/api.yaml
@@ -17,6 +17,14 @@
           title: 是
       default: false
       description: 是否是卡片风格
+  slots:
+    - name: default
+      description: 插入`<van-cell>`子组件。
+      empty-background: add-sub-large
+      support:
+        - name: van-cell
+          title: 单元格
+          snippet: <van-cell title="单元格" isLink vusion-slot-name="default" center>内容</van-cell>
 - name: van-cell
   title: 单元格
   attrs:
