--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@lcap/mobile-ui",
-  "version": "0.10.8",
+  "version": "0.11.3",
   "lcapname": "@lcap/mobile-ui",
   "lcapversion": "0.6.3",
   "description": "Mobile UI Components built on Vue",
-  "main": "lib/index.js",
-  "module": "es/index.js",
+  "main": "lib/vant.min.js",
+  "module22": "es/index.js",
   "style": "lib/index.css",
   "typings": "types/index.d.ts",
   "files": [
@@ -24,7 +24,7 @@
     "dev2": "vant-cli dev",
     "lint": "vant-cli lint",
     "test": "vant-cli test",
-    "build:vusion": "vue-cli-service library-build --dest dist-theme && rm -rf lib && mv dist-theme lib && mv lib/index.js lib/vant.min.js",
+    "build:vusion": "vue-cli-service library-build --dest dist-theme && shx rm -rf lib && shx mv dist-theme lib && shx mv lib/index.js lib/vant.min.js",
     "build2": "vant-cli build",
     "build": "cross-env scene=desktop vant-cli build",
     "release": "vant-cli release",
@@ -90,6 +90,7 @@
     "cross-env": "^7.0.3",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "2.1.0",
+    "shx": "^0.3.3",
     "vue": "^2.6.12",
     "vue-cli-plugin-vusion": "^0.14.0",
     "vue-i18n": "^8.26.0",
