--- a/packages/vant-lazyload/package.json
+++ b/packages/vant-lazyload/package.json
@@ -25,6 +25,9 @@
     "@babel/core": "^7.12.9",
     "release-it": "^14.2.2"
   },
+  "dependencies": {
+    "@vant/use": "^1.3.1"
+  },
   "release-it": {
     "git": {
       "tag": false,
