fix(@vant/cli): added markdown link open plugin

--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -34,6 +34,7 @@
     "@types/fs-extra": "^9.0.12",
     "@types/less": "^3.0.3",
     "@types/lodash": "^4.14.173",
+    "@types/markdown-it": "^12.2.1",
     "@types/postcss-load-config": "^3.0.1",
     "@vue/compiler-sfc": "3.2.12",
     "vue": "3.2.12"
