--- a/packages/vant-lazyload/package.json
+++ b/packages/vant-lazyload/package.json
@@ -14,19 +14,20 @@
     "types"
   ],
   "scripts": {
-    "dev": "babel src --out-dir dist/esm --watch",
-    "build": "babel src --out-dir dist/esm && BABEL_MODULE=commonjs babel src --out-dir dist/cjs",
+    "dev": "rollup --config rollup.config.js --watch",
+    "build": "rollup --config rollup.config.js",
     "release": "npm run build && release-it"
   },
   "license": "MIT",
   "repository": "https://github.com/youzan/vant/tree/dev/packages/vant-lazyload",
-  "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
-    "release-it": "^14.2.2"
-  },
   "dependencies": {
     "@vant/use": "^1.3.2"
+  },
+  "devDependencies": {
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "release-it": "^14.2.2",
+    "rollup": "^2.33.3"
   },
   "release-it": {
     "git": {
