--- a/src/cell-group/api.yaml
+++ b/src/cell-group/api.yaml
@@ -61,6 +61,7 @@
       title: 标题下方的描述信息
       type: string
       default: 这是单元格
+      advanced: true
       description: 标题下方的描述信息
     - name: linkType
       title: 链接类型
