--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -89,7 +89,7 @@
     "ts-jest": "^26.5.2",
     "typescript": "^4.3.2",
     "vue-jest": "^5.0.0-alpha.8",
-    "vue-loader": "^16.1.2",
+    "vue-loader": "16.5.0",
     "vue-router": "^4.0.0",
     "webpack": "^5.38.1",
     "webpack-dev-server": "^3.11.2",
