--- a/src/calendar/api.yaml
+++ b/src/calendar/api.yaml
@@ -30,11 +30,11 @@
       description: 选择类型
     - name: min-date
       title: 最小日期
-      type: Date
+      type: Date,String
       description: 最小日期,默认为今天
     - name: max-date
       title: 最大日期
-      type: Date
+      type: Date,String
       description: 最大日期,默认当前日期的六个月后
     - name: title
       title: 日历标题
