--- a/src/cell-group/api.yaml
+++ b/src/cell-group/api.yaml
@@ -57,6 +57,11 @@
       type: string
       default: 单元格
       description: 左侧标题
+    - name: value
+      title: 右侧内容
+      type: string
+      default: 内容
+      description: 右侧内容
     - name: label
       title: 标题下方的描述信息
       type: string
