--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -31,32 +31,32 @@
   "author": "chenjiahan",
   "license": "MIT",
   "devDependencies": {
-    "@types/fs-extra": "^9.0.12",
+    "@types/fs-extra": "^9.0.13",
     "@types/less": "^3.0.3",
     "@types/lodash": "^4.14.175",
-    "@types/markdown-it": "^12.2.1",
+    "@types/markdown-it": "^12.2.3",
     "@types/postcss-load-config": "^3.0.1",
-    "@vue/compiler-sfc": "3.2.12",
-    "vue": "3.2.12"
+    "@vue/compiler-sfc": "^3.2.19",
+    "vue": "^3.2.19"
   },
   "dependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
     "@docsearch/css": "3.0.0-alpha.40",
     "@docsearch/js": "3.0.0-alpha.40",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^27.0.2",
     "@vant/eslint-config": "^3.3.2",
     "@vant/markdown-vetur": "^2.2.0",
     "@vant/stylelint-config": "^1.4.2",
     "@vant/touch-emulator": "^1.3.2",
-    "@vitejs/plugin-vue": "^1.9.0",
+    "@vitejs/plugin-vue": "^1.9.3",
     "@vitejs/plugin-vue-jsx": "^1.2.0",
-    "@vue/babel-plugin-jsx": "^1.0.7",
+    "@vue/babel-plugin-jsx": "^1.1.0",
     "@vue/test-utils": "2.0.0-rc.14",
-    "autoprefixer": "^10.3.6",
-    "babel-jest": "^27.2.1",
-    "clean-css": "^5.1.5",
+    "autoprefixer": "^10.3.7",
+    "babel-jest": "^27.2.4",
+    "clean-css": "^5.2.1",
     "commander": "^8.2.0",
     "consola": "^2.15.3",
     "conventional-changelog": "^3.1.24",
@@ -66,25 +66,25 @@
     "hash-sum": "^2.0.0",
     "highlight.js": "^11.2.0",
     "husky": "^7.0.2",
-    "jest": "^27.2.1",
+    "jest": "^27.2.4",
     "jest-canvas-mock": "^2.3.1",
     "jest-serializer-html": "^7.1.0",
-    "less": "^4.1.1",
-    "lint-staged": "^11.1.2",
+    "less": "^4.1.2",
+    "lint-staged": "^11.2.0",
     "lodash": "^4.17.21",
     "markdown-it": "^12.2.0",
     "markdown-it-anchor": "^8.3.1",
     "ora": "^5.4.1",
-    "postcss": "^8.3.6",
+    "postcss": "^8.3.9",
     "postcss-load-config": "^3.1.0",
     "prettier": "^2.4.1",
-    "release-it": "^14.11.5",
+    "release-it": "^14.11.6",
     "stylelint": "^13.13.1",
     "transliteration": "^2.2.0",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3",
-    "vite": "^2.6.2",
-    "vite-plugin-html": "^2.1.0",
+    "vite": "^2.6.5",
+    "vite-plugin-html": "^2.1.1",
     "vite-plugin-md": "^0.11.1",
     "vue-router": "^4.0.0",
     "vue3-jest": "^27.0.0-alpha.2"
