Revert "chore: adjust package entry file (#9455)"
This reverts commit c3f08f4637cc07c5e464811feab6d641b7b4471f.

--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -2,8 +2,8 @@
   "name": "vant",
   "version": "3.2.4",
   "description": "Mobile UI Components built on Vue",
-  "main": "lib/vant.js",
-  "module": "lib/vant.es.js",
+  "main": "lib/index.js",
+  "module": "es/index.js",
   "style": "lib/index.css",
   "typings": "lib/index.d.ts",
   "files": [
