--- a/src/dialog/api.yaml
+++ b/src/dialog/api.yaml
@@ -26,6 +26,14 @@
     - name: default
       description: 内容自定义
   events:
+    - name: confirm
+      title: 点击确认按钮时触发
+      description: 点击确认按钮时触发
+      params: []
+    - name: cancel
+      title: 点击取消按钮时触发
+      description: 点击取消按钮时触发
+      params: []
     - name: open
       title: 打开弹出层后
       description: 打开弹出层时触发
