--- a/src/calendar/api.yaml
+++ b/src/calendar/api.yaml
@@ -39,11 +39,11 @@
       description: 最大日期,默认当前日期的六个月后
     - name: title
       title: 日历标题
-      type: String
+      type: string
       default: 选择日期
     - name: readonly
       title: 禁用
-      type: Boolean
+      type: boolean
       default: false
   slots: false
   events:
