--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lcap/mobile-ui",
-  "version": "0.12.9924",
+  "version": "0.12.0",
   "lcapname": "@lcap/mobile-ui",
   "lcapversion": "0.6.3",
   "description": "Mobile UI Components built on Vue",
@@ -37,7 +37,7 @@
     "deploy:dev": "node ./scripts/lcap && lcap deploy dist-theme --platform http://lcp.vusion.top && node bin/deploy-lcp-images --platform=http://lcp.vusion.top",
     "deploy:dev2": "node ./scripts/lcap && node ./bin/upload.js",
     "deploy:test": "node ./scripts/lcap && lcap deploy dist-theme --platform http://defaulttenant.low-code-fe.qa-ci-lowcode.service.163.org && node bin/deploy-lcp-images --platform=http://defaulttenant.low-code-fe.qa-ci-lowcode.service.163.org",
-    "deploy:online": "node ./scripts/lcap && vusion deploy --framework cloud-ui.vusion@0.11 -v minor && vusion deploy --framework cloud-ui dist-theme && node bin/deploy-screenshots && node bin/deploy-drawings"
+    "deploy:online": "node ./scripts/lcap && vusion deploy --framework @lcap/mobile-ui dist-theme && node bin/deploy-screenshots && node bin/deploy-lcp-images --platform=http://netease-template.lcap.163yun.com"
   },
   "husky": {
     "hooks": {
