--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vant/cli",
-  "version": "4.0.0-beta.7",
+  "version": "4.0.0-rc.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "bin": {
