feat: del 毫秒级渲染选项

--- a/src/count-down/api.yaml
+++ b/src/count-down/api.yaml
@@ -24,6 +24,7 @@
       title: 是否开启毫秒级渲染
       type: boolean
       default: false
+      advanced: true
       description: 是否开启毫秒级渲染
   slots: false
   events:
