--- a/.github/workflows/compressed-size.yml
+++ b/.github/workflows/compressed-size.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: preactjs/compressed-size-action@v2
         with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
           pattern: './packages/vant/lib/{vant.min.js,index.css}'
-          exclude: '{./build-output/manifest.json,**/*.map,**/node_modules/**}'
