--- a/src/fieldtextarea/api.yaml
+++ b/src/fieldtextarea/api.yaml
@@ -1,5 +1,5 @@
 - name: van-fieldtextarea
-  title: 单行输入
+  title: 多行输入
   icon: textarea
   labels:
     - Form
@@ -56,11 +56,11 @@
       type: string, number
       description: 输入的最大字符数
     - name: show-word-limit
-      title: 是否显示字数统计，需要设置maxlength属性
+      title: 是否显示字数统计
       type: boolean
       description: 是否显示字数统计，需要设置maxlength属性
     - name: autosize
-      title: '是否自适应内容高度,可传入对象,如 { maxHeight: 100, minHeight: 50 },单位为px'
+      title: '是否自适应内容高度'
       type: boolean, object
       description: '是否自适应内容高度,可传入对象,如 { maxHeight: 100, minHeight: 50 },单位为px'
   slots: []
