--- a/src/radio-group/api.yaml
+++ b/src/radio-group/api.yaml
@@ -16,6 +16,11 @@
       type: boolean
       default: false
       description: 是否禁用
+    - name: readonly
+      title: 只读
+      type: boolean
+      default: false
+      description: 是否只读
     - name: direction
       title: 排列方向
       type: string
